# jabara-persist-util

./: jabara-persist-util.cabal
src/Jabara/Persist/: Util.hs
