name:                jabara-persist-util
version:             0.1.0.0
synopsis:            Utility for Database.Persist.
description:         Please see README.md
homepage:            https://github.com/jabaraster/jabara-persist-util
license:             MIT
license-file:        LICENSE
author:              jabaraster
maintainer:          ah@jabara.info
copyright:           2016 jabaraster
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , persistent-template
                     , persistent
                     , containers
                     , mtl

  exposed-modules:     Jabara.Persist.Util

source-repository head
  type:     git
  location: git@github.com:jabaraster/jabara-persist-util.git
